--- a/Tres en raya/Tres en raya.vcxproj.filters
+++ b/Tres en raya/Tres en raya.vcxproj.filters
@@ -101,6 +101,12 @@
     <ClInclude Include="PlayerDAO.h">
       <Filter>Header Files\Interfaces</Filter>
     </ClInclude>
+    <ClInclude Include="IMongoConection.h">
+      <Filter>Header Files\Interfaces</Filter>
+    </ClInclude>
+    <ClInclude Include="IMongoCollection.h">
+      <Filter>Header Files\Interfaces</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\x64\Debug\player_config.txt">
